update translation of books/dev-model to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53714

--- a/documentation/content/ru/books/dev-model/_index.po
+++ b/documentation/content/ru/books/dev-model/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-31 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksdev-model_index/ru/>\n"
@@ -461,7 +461,7 @@ msgid ""
 msgstr ""
 "Количество коммиттеров было определено путем анализа журналов CVS с 1 января "
 "2004 года по 31 декабря 2004 года, а список участников — путем просмотра "
-"перечня внесенных изменений и отчетов о проблемах."
+"перечня внесенных изменений и отчётов о проблемах."
 
 #. type: Plain text
 #: documentation/content/en/books/dev-model/_index.adoc:196
@@ -1365,7 +1365,7 @@ msgid ""
 "FreeBSD project. [crossref:dev-model[freebsd-contributors, FreeBSD, 2002F]]"
 msgstr ""
 "Участник вносит вклад в проект FreeBSD в качестве разработчика, автора, "
-"отправляя отчеты о проблемах или другими способами способствуя прогрессу "
+"отправляя отчёты о проблемах или другими способами способствуя прогрессу "
 "проекта. Участник не имеет особых привилегий в проекте FreeBSD. [crossref"
 ":dev-model[freebsd-contributors, FreeBSD, 2002F]]"
 
@@ -1984,12 +1984,12 @@ msgstr "Процессозависимые роли"
 #: documentation/content/en/books/dev-model/_index.adoc:646
 #, no-wrap
 msgid "Report originator"
-msgstr "Инициатор отчета"
+msgstr "Инициатор отчёта"
 
 #. type: Plain text
 #: documentation/content/en/books/dev-model/_index.adoc:649
 msgid "The person originally responsible for filing a Problem Report."
-msgstr "Лицо, изначально ответственное за подачу отчета о проблеме."
+msgstr "Лицо, изначально ответственное за подачу отчёта о проблеме."
 
 #. type: Title ====
 #: documentation/content/en/books/dev-model/_index.adoc:651
@@ -2642,7 +2642,7 @@ msgid ""
 "handled by the crossref:dev-model[tool-bugzilla, Bugzilla] tool."
 msgstr ""
 "Требования проекта определяются пожеланиями разработчиков, запросами "
-"сообщества в виде прямых обращений по почте, отчетов о проблемах (Problem "
+"сообщества в виде прямых обращений по почте, отчётов о проблемах (Problem "
 "Reports), коммерческим финансированием разработки функциональности или "
 "вкладами научного сообщества. Пожелания, которые входят в зону "
 "ответственности разработчика, передаются этому разработчику, который "
@@ -2866,7 +2866,7 @@ msgstr ""
 "После того, как кто-то берёт ответственность за отчёт, он анализируется.  "
 "Этот анализ включает проверку проблемы и разработку решения.  Часто "
 "требуется обратная связь от автора отчёта или даже от сообщества FreeBSD.  "
-"Как только создаётся патч для устранения проблемы, автора отчета могут "
+"Как только создаётся патч для устранения проблемы, автора отчёта могут "
 "попросить его протестировать.  В итоге рабочий патч интегрируется в проект "
 "и, если необходимо, документируется.  Затем он проходит стандартный цикл "
 "сопровождения, как описано в разделе crossref:dev-model[model-maintenance, "
@@ -2897,8 +2897,8 @@ msgid ""
 "to create a working patch.  This patch is then committed and the problem "
 "report is closed."
 msgstr ""
-"Проблема сообщается автором отчета. Затем она классифицируется ответственным "
-"за обработку ошибок и передается соответствующему сопровождающему. Он "
+"Проблема сообщается автором отчёта. Затем она классифицируется ответственным "
+"за обработку ошибок и передаётся соответствующему сопровождающему. Он "
 "проверяет проблему и обсуждает её с автором отчёта до тех пор, пока не будет "
 "собрано достаточно информации для создания рабочего исправления. Это "
 "исправление затем фиксируется, и отчёт о проблеме закрывается."
@@ -2911,7 +2911,7 @@ msgstr "Роли, включенные в этот процесс:"
 #. type: Plain text
 #: documentation/content/en/books/dev-model/_index.adoc:953
 msgid "crossref:dev-model[role-problem-originator, Report originator]"
-msgstr "crossref:dev-model[role-problem-originator, Инициатор отчета]"
+msgstr "crossref:dev-model[role-problem-originator, Инициатор отчёта]"
 
 #. type: Plain text
 #: documentation/content/en/books/dev-model/_index.adoc:955
