--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -452,6 +452,11 @@ gitref:58ae50f31e95[repository=src]
 `bc` has been upgraded to 7.0.2.
 gitref:90ea553a0d30[repository=src]
 
+`blacklist` has been renamed upstream to `blocklist`.
+Existing setups will continue to work emitting a warning.
+The snapshot used is 20251026.
+gitref:4afb96fdd272[repository=src].
+
 `libarchive` has been upgraded to 3.7.7.
 gitref:2ae238160f20[repository=src]
 
