--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -56,7 +56,7 @@ General discussions about the pending release and known issues should be sent to
 |RC2 builds begin |[.line-through]#7 November 2025# +
 |18 November 2025 |Second release candidate.
 |RC3 builds begin |[.line-through]#14 November 2025# +
-21 November 2025 |- |[.line-through]#Third release candidate.#
+21 November 2025 |- |Third release candidate.
 |[.line-through]#RC4 builds begin# |[.line-through]#21 November 2025# |- |[.line-through]#Fourth release candidate.#
 |RELEASE builds begin |28 November 2025 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |2 December 2025 |- |{localRel}-RELEASE press release.
