Record the v6.17 driver updates for iwlwifi, rtw88, and rtw89 all along with possible ceveats.
Mention iwlwifi, iwx, and rtwn supporting 11ac in the wireless section
and remove a superfluous remark on rtw88 from a previous release
(though history seems to repeat itself with that driver).

Sponsore by:	The FreeBSD Foundation

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -650,6 +650,18 @@ A driver is available for man:ice[4] Ethernet network controllers in the Intel E
 It was upgraded to version 1.43.2-k.
 gitref:38a1655adcb3[repository=src] (Sponsored by Intel Corporation)
 
+man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.17 (gitref:c1d365f39e08[repository=src]).
+A possible issue that devices cannot authenticate is still being investigated.
+(Sponsored by The FreeBSD Foundation).
+
+man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.17 (gitref:b35044b38f74[repository=src]).
+The driver is under-tested and may still have issues.
+(Sponsored by The FreeBSD Foundation).
+
+man:iwlwifi[4]: Merge Intels's iwlwifi mvm/mld driver based on Linux v6.17 (gitref:69caa1cf3ce5[repository=src]).
+The BE200 based chipsets will need newer firmware requiring further driver fixes which are not in this release.
+(Sponsored by The FreeBSD Foundation).
+
 Numerous stability improvements have been in the man:iwlwifi[4] driver for Intel Wi-Fi devices.
 (Sponsored by The FreeBSD Foundation)
 
@@ -913,9 +925,11 @@ gitref:3965be101c43[repository=src]
 
 The LinuxKPI 802.11 compatibility layer man:linuxkpi_wlan[4] gained support for the Galois/Counter Mode Protocol (GCMP) from man:wlan_gcmp[4]. (Sponsored by The FreeBSD Foundation)
 
-The man:rtw88[4] driver was made to work (associate) again and a memory leak got resolved. (Sponsored by The FreeBSD Foundation)
-
 Following other drivers man:iwlwififw[4] firmware was removed from the base system in favor of the ports based solution and man:fwget[8] support.  In case of updating from earlier releases, users must install the firmware packages upfront. (Sponsored by The FreeBSD Foundation)
+
+The man:iwlwifi[4] wireless driver supports 802.11ac (VHT) for some Intel Wi-Fi 5, and all of Intel Wi-Fi 6 and Wi-Fi 7 hardware. (Sponsored by The FreeBSD Foundation)
+The man:iwx[4] wireless driver supports 802.11ac (VHT) for Intel Wi-Fi 6 harddware. (Sponsored by The FreeBSD Foundation)
+The man:rtwn[4] wireless driver supports 802.11ac (VHT) for the RTL8812A and RTL8821A chipsets.
 
 [[hardware]]
 == Hardware Support
