*/relnotes: use correct branding for OVHcloud
Reported by:	bapt

--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -193,7 +193,7 @@ This section covers changes in support for cloud environments.
 {releaseCurrent} supports cloudinit, including the `nuageinit` startup script and support for a `config-drive` partition.
 It is compatible with OpenStack and many hosting facilities.
 See the https://cloud-init.io[cloud-init] web site and the commit messages,
-gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src]. (Sponsored by OVHCloud)
+gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src]. (Sponsored by OVHcloud)
 
 [[kernel]]
 == Kernel
