--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -259,7 +259,7 @@ gitref:33c82f11c267[repository=src]
 This section covers changes in support for cloud environments.
 
 The `nuageinit` startup script now supports OpenStack network config.
-gitref:ea310d18b222[repository=src] (Sponsored by OVHCloud)
+gitref:ea310d18b222[repository=src] (Sponsored by OVHcloud)
 
 The FreeBSD project is now publishing OCI-compatible container images.
 gitref:8a688fcc242e[repository=src]
